# ds_rust

./: .gitignore  AUTHORS  Architecture.dia  BUILD  DISCLAIMER  Makefile.am  README  configure.ac
plugins/hellorust/: Cargo.toml  enable.ldif
plugins/hellorust/src/: lib.rs
plugins/ro_replica/: Cargo.toml  enable.ldif
plugins/ro_replica/src/: lib.rs
rpm/: ds-rust-plugins.spec
rs389/: __init__.py
rs389/tests/: __init__.py  hellorust_test.py  ro_replica_test.py  setup_test.py
sh/: extract-cargo-release.sh
slapi_r_plugin/: Cargo.toml  build.rs
slapi_r_plugin/src/: lib.rs
slapi_r_plugin/src/constants/: mod.rs
slapi_r_plugin/src/entry/: mod.rs
slapi_r_plugin/src/error/: mod.rs
slapi_r_plugin/src/log/: mod.rs
slapi_r_plugin/src/operation/: mod.rs
slapi_r_plugin/src/pblock/: mod.rs
slapi_r_plugin/src/plugin/: mod.rs
